[project]
name = "branched-sdk"
version = "0.1.0"
description = "Python SDK for Branched API"
authors = [
    {name = "Manish Mothi",email = "Mmanish0881@gmail.com"}
]
packages = [
    { include = "branched_sdk", from = "src" },
    { include = "generated", from = "." } 
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openapi-python-client (>=0.24.3,<0.25.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

