[project]
name = "branched-sdk"
version = "0.1.7"
description = "Python SDK for Branched API"
authors = [
    {name = "Manish Mothi",email = "Mmanish0881@gmail.com"}
]
packages = [
    { include = "branched_sdk", from = "src" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
homepage = "https://github.com/ManishMothi/branched-sdk"
repository = "https://github.com/ManishMothi/branched-sdk"
keywords = ["branched", "contexttree", "sdk", "api", "python"]

dependencies = [
    "tenacity (>=9.1.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
dotenv = "^0.9.9"
openapi-python-client = ">=0.24.3,<0.25.0"